Bug 187839. Caret turns of when turning on Japanese IME. Patch by skamio@netscape.net. r=aaronl, sr=bryner, a=dbaron